--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
                 </div>
             </div>
             <nav class="primary-nav-wrapper">
-                <label for="burger__checkbox" class="burger__menu-icon">
-                    <div class="burger-element burger-element--top"></div>
-                    <div class="burger-element burger-element--middle"></div>
-                    <div class="burger-element burger-element--bottom"></div>
-                    MENU
+
+                <input type="checkbox" name="burger__checkbox" id="burger-menu-checkbox">
+                <label for="burger-menu-checkbox">
+                    <div class="icon nav-icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </label>
-                <input type="checkbox" name="burger__checkbox" id="burger__checkbox">
                 <ul class="header__primary-nav primary-nav">
                     <li class="primary-nav__element"><a href="#">Destinations</a></li>
                     <li class="primary-nav__element"><a href="#">Species</a></li>
@@ -91,8 +93,7 @@
                     <div class="main-content__header">
                         <h1 class="main-content__title">Naturetour &nbsp; Wild life Holidays</h1>
                         <p class="main-content__text">A selection of worldwide bird watching, wild flower and natural
-                            history holidays (including wildlife tours, treks and cruises), all led by expert <a
-                                class="main-content__link" href="#">naturalist guides.</a></p>
+                            history holidays (including wildlife tours, treks and cruises), all led by expert <a class="main-content__link" href="#">naturalist guides.</a></p>
                     </div>
                     <section class="sort-tour">
                         <div class="man-with-camera">
@@ -262,8 +263,7 @@
                     </h4>
                     <div class="footer__text footer__text--twitter"> * 4 days ago The new website is now live. We hope
                         you enjoy it and any feedback is welcome.</div>
-                    <button class="footer__button footer__button--facebook">Join us on Facebook <img
-                            src="./img/facebook-icon.png" alt="facebook-icon"></button>
+                    <button class="footer__button footer__button--facebook">Join us on Facebook <img src="./img/facebook-icon.png" alt="facebook-icon"></button>
                 </div>
                 <div class="footer__column footer__column--links">
                     <h4 class="footer__title">
@@ -297,8 +297,7 @@
                     <h4 class="footer__title">Contact US</h4>
                     <div class="footer__text"> <a href="tel:1234567890"><span class="footer__text-bold">Tel:</span>
                             12345 67890</a> </div>
-                    <div class="footer__text"><a href="mailto:info@naturetour.com"><span
-                                class="footer__text-bold">Email:</span> info@naturetour.com</a>
+                    <div class="footer__text"><a href="mailto:info@naturetour.com"><span class="footer__text-bold">Email:</span> info@naturetour.com</a>
                     </div>
                     <div class="footer__text footer__adress">
                         <adress>Naturetour, Your City, Your state, 123 456 789</adress>
