--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <nav class="primary-nav-wrapper">
 
                 <input type="checkbox" name="burger__checkbox" id="burger-menu-checkbox">
-                <label for="burger-menu-checkbox">
+                <label for="burger-menu-checkbox" class="burger__menu-icon">
                     <div class="icon nav-icon">
                         <span></span>
                         <span></span>
